# hattotto

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  package-lock.json  package.json  playwright.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml  visual-test.yml
scripts/: release.sh
src/: index.html  note.html  settings.html  trash.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs  model.rs  persistence.rs  tray.rs  window.rs
tests/visual/: accessibility.spec.ts  autosave-debounce-e2e.spec.ts  caret-restore-e2e.spec.ts  checkbox-autocomplete.spec.ts  checkbox-toggle.spec.ts  context-menu-scope.spec.ts  delete-note-e2e.spec.ts  fixtures.ts  html-to-markdown.spec.ts  ime-guard-e2e.spec.ts  link-click-e2e.spec.ts  markdown-autocontinue-e2e.spec.ts  markdown-codeblock.spec.ts  note-interactions-e2e.spec.ts  note.spec.ts  paste-e2e.spec.ts  render-markdown-complex.spec.ts  render-markdown.spec.ts  settings-apply-e2e.spec.ts  settings-dirty-e2e.spec.ts  settings.spec.ts  trash-e2e.spec.ts  trash.spec.ts  zoom-e2e.spec.ts
