[package]
name = "hattotto"
version = "0.1.11"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
rand = "0.8"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
